Fix header misalignment... This was working fine yesterday

--- a/src/global.sass
+++ b/src/global.sass
@@ -23,6 +23,7 @@ body
 	justify-content: center
 
 header
+	top: 0
 	height: 10vh
 	position: fixed
 	width: 100%
